2012-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: correct some dry run costs, update genDivOneByte()
	  and genModOneByte() to handle all register operand posibilities

2012-05-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/pobj.cc,
	* sim/ucsim/pobjcl.h: made cl_list::at inline
	* sim/ucsim/s51.src/regs51.h: added AP
	* sim/ucsim/s51.src/uc390.cc (inst_inc_dptr): fixed sel bug,
	  (disass): show inc/dec dptr,
	  (print_regs): show DPTR0, DPTR1 and AP	
	* src/ds390/gen.c (genGenPointerGet, genGenPointerSet): fixed bug 3509705
	* support/regression/compact-results.py: align results
	* support/regression/tests/gcc-torture-execute-921013-1.c: enabled tests

2012-05-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/hc08/ralloc2.c:
	  Bypass dry run for generated ic.

2012-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.h,
	* src/hc08/gen.c (aopName): compile conditionally,
	  (assignResultValue): MSVC has no true/false,
	  (hasInchc08): fixed warning,
	  (genReceive): declarations first
	* src/hc08/ralloc.c: include dbuf_string.h,
	  (createStackSpil): removed unused slocBuffer
	* src/hc08/hc08.vcxproj.filters,
	* src/hc08/hc08.vcxproj: added ralloc2.cc and boost include dir
	* src/z80/gen.c (genCmp): fixed uninitialised warning
	* src/SDCCicode.h: cosmetics

2012-05-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/hc08/ralloc2.cc:
	  Added some debug info code.

2012-05-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c,
	  src/hc08/ralloc.c:
	  Remove some unused variables.

2012-05-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (aopOp): Handle spill location correctly even
	  though it is not actually allocated during dry run

2012-05-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/ports/ds390/spec.mk: